--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@ http://mapzen.com/tangram
 
     <!-- Tangram library -->
     <!-- modern browsers load the optimized .mjs file, older browsers (IE11) load the transpiled .js file -->
-    <script type="module" src="dist/tangram.debug.mjs"></script>
-    <script nomodule src="dist/tangram.debug.js"></script>
+    <script src="dist/tangram.min.js"></script>
 
     <!-- Tangram demo code -->
     <script defer src="demos/main.js"></script>
